--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
-body {
-    background-color: blue;
+/* Header */
+h1 {
+    text-align: center;
+}
+
+/*Game area*/
+
+.game-area {
+    background-color: lightgray;
+    width: 75%;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.game-area h2 {
+    text-align: center;
 }
