--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 /*Body*/
 
 body {
+
+    /*To get rid of default styling*/
+    margin: 0;
+    padding: 0;
+    border: 0;
+    
     font-family:"Roboto", sans-serif;
     background-color: #d5df6e;
     color: white;
@@ -56,7 +62,7 @@ button:hover {
 }
 
 img {
-    width: 80%;
+    width: 70%;
 }
 
 .button {
